Name:                himpress
Version:             0.0
Synopsis:            Himpress is a tool to generate html5 slideshows using impress.js.
Description:         Himpress is a tool to generate html5 slideshows using impress.js.
Homepage:            https://github.com/matthewSorensen/himpress
License:             BSD3
License-file:        LICENSE
Author:              Matthew Sorensen
Maintainer:          scholl.ma@gmail.com
Copyright:           2012, Matthew Sorensen
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.2
Executable: himpress
Main-is: himpress.hs  
  -- Packages needed in order to build this package.
Build-depends:  text, base, bytestring, haskell98, blaze-html, containers, attoparsec, pandoc, hscolour, lenses, attoparsec-text
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  