Name:                himpress
Version:             1.0
Synopsis:            Himpress is a tool to generate html5 slideshows using impress.js.
Description:         Himpress is a tool to generate html5 slideshows using impress.js.
Homepage:            https://github.com/matthewSorensen/himpress
License:             BSD3
License-file:        LICENSE
Data-Files:          js/impress.min.js js/start.js css/style.css
Author:              Matthew Sorensen
Maintainer:          scholl.ma@gmail.com
Copyright:           2012, Matthew Sorensen
Category:            Text
Build-type:          Simple
Executable:          himpress
Main-is:             himpress.hs  
Build-depends:       text, base, haskell98, blaze-html, containers, attoparsec >= 0.10, pandoc, hscolour, lenses, cmdargs, hinotify, filepath

